# gigastep

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
baselines/: bline_ppo.py  run_ppo.py
examples/: benchmark.py  calibrate_throttle.py  demo_features.py  gen_video.py  human_vs_circling.py  plot_speed.py  plot_wins.py  run_human.py  run_viewer.py  simple_es.py  test_batch.py  test_curriculum.py  test_evaluator.py  test_obs_type.py  test_policy_rating.py  test_scenarios.py  test_stacked_env.py  test_swarm.py  test_torch.py  test_vmap.py
gigastep/: __init__.py  builtin_maps.py  evaluator.py  gigastep_env.py  gui_viewer.py  jax_utils.py  joystick_input.py  play_human.py  rate_policy.py  render_checkpoint.py  render_checkpoint_vs_learned.py  run_benchmark.py  scenarios.py
gigastep/torch/: __init__.py
test/: test_env.py
third-party-learning/evaluation/: evaluate.py
third-party-learning/evosax/networks/: __init__.py  lstm.py  lstm_cnn.py  mlp.py  shared.py
third-party-learning/evosax/problems/: gigastep.py
third-party-learning/evosax/scripts/: run_strategy.py
third-party-learning/evosax/scripts/deprecated/: run_asebo.py  run_cr_fm_nes.py  run_des.py  run_open_es.py
third-party-learning/purejax/: clone_human.py  cross_eval.py  ippo.py  network.py  replay.py  test_bc.py  utils.py
third-party-learning/torch_ppo/: enjoy_policy_discrete.py  main.py
third-party-learning/torch_ppo/a2c_ppo_acktr/: arguments.py  distributions.py  envs.py  model.py  storage.py  utils.py
third-party-learning/torch_ppo/a2c_ppo_acktr/algo/: a2c_acktr.py  ppo.py
